#34 alignment correction

--- a/assets/sass/checkout.scss
+++ b/assets/sass/checkout.scss
@@ -285,6 +285,7 @@ body.woocommerce-checkout{
 		box-shadow: none !important;
 	}
 	.btn-next {
+		margin-top: 5px;
 		margin-bottom:10px;
 	}
 	.payment_box .form-row {
